CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )

SET( PROJ_NAME      "The_Sky_Castle" )
SET( PROJ_PATH      ${CMAKE_SOURCE_DIR} )
SET( PROJ_OUT_PATH  ${CMAKE_BINARY_DIR} )
SET( PROJ_INCLUDES  "include" )

FILE( GLOB_RECURSE PROJ_SOURCES src/*cpp test/*cpp misc/* doc/*)
FILE( GLOB_RECURSE PROJ_HEADERS ${PROJ_INCLUDES}/${PROJ_NAME}/*.h )

PROJECT( ${PROJ_NAME} )

#FIND_PACKAGE( OpenCV REQUIRED )
#FIND_PACKAGE( Boost COMPONENTS thread system REQUIRED )

#SET( PROJ_LIBRARIES ${OpenCV_LIBS} ${Boost_LIBRARIES})
#SET( PROJ_LIBRARIES "misc/*" )

INCLUDE_DIRECTORIES( ${PROJ_INCLUDES} )
ADD_EXECUTABLE( ${PROJ_NAME} ${PROJ_SOURCES} ${PROJ_HEADERS} )
TARGET_LINK_LIBRARIES( ${PROJ_NAME} ${PROJ_LIBRARIES} )
